<IM> 2024-09-25
Fix error: JSON cannot parse password - string mismatch
Add func: DeleteUser

tested ok on swaggerUI
