# service/user_service.go
@@ -3,6 +3,7 @@ package service
 import (
 	"IM/models"
 	"fmt"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -24,8 +25,8 @@ func GetUserList(c *gin.Context) {
 // CreateUser
 // @Summary Add New User
 // @Tags User
-// @Param name query string false "User Name"
-// @Param password query string false "Enter password"
+// @Param Name query string false "User Name"
+// @Param Password query string false "Enter password"
 // @Param rePassword query string false "Enter password again"
 // @Success 200 {string} json{"code", "message"}
 // @Router /user/CreateUser [get]
@@ -36,7 +37,7 @@ func CreateUser(c *gin.Context) {
 	rePassword := c.Query("rePassword")
 	fmt.Println(password + " | " + rePassword)
 	if password != rePassword {
-		c.JSON(-1, gin.H{
+		c.JSON(400, gin.H{
 			"message": "Password mismatch!",
 		})
 	}
@@ -44,5 +45,27 @@ func CreateUser(c *gin.Context) {
 	models.CreateUser(user)
 	c.JSON(200, gin.H{
 		"message": "Create user success!",
+	})
+}
+
+// DeleteUser
+// @Summary Delete Exist User
+// @Tags User
+// @Param id query string false "Deleted ID"
+// @Success 200 {string} json{"code", "message"}
+// @Router /user/DeleteUser [get]
+func DeleteUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.Query("id"))
+	user.ID = uint(id)
+	ret := models.DeleteUser(user)
+	if ret.Error != nil {
+		c.JSON(400, gin.H{
+			"message": ret.Error,
+		})
+		return
+	}
+	c.JSON(200, gin.H{
+		"message": "User deleted!",
 	})
 }
